feat: changes working to hot reload